2.9.10:

2006-08-05  Johannes Schmid  <jhs@cvs.gnome.org>

	* docs/tutorial/gtkmm-tut.xml:
	Utility is called enum.pl not enums.pl (#350028)

2006-08-03  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/printing/advanced/previewdialog.cc:
	* examples/book/printing/advanced/previewdialog.h:
	Store the print context as a member variable instead of using sigc::bind 
	to use it in on_drawing_area_realized(). Null the print context and preview 
	refptrs when we call end_preview(), because we have stopped using them, 
	and maybe we should not be keeping their objects alive. 

2006-08-03  Marko Anastasov  <marko@marko.anastasov.name>

	* examples/book/printing/advanced/previewdialog.cc:
	* examples/book/printing/advanced/previewdialog.h:
	* examples/book/printing/advanced/printformoperation.cc:
	Don't pass page_count as a ctor parameter but access it directly via
	m_pOperation when needed. It's also incorrect the first way because
	it has not yet been determined at the point of PreviewDialog's
	construction. Added an Adjustment to use it with the spin button
	in PreviewDialog so that spinning within multiple pages actually works.

2006-08-03  Marko Anastasov  <marko@marko.anastasov.name>

	* examples/book/printing/advanced/previewdialog.cc:
	Added forgotten call to hide() in on_close_clicked().

2006-08-03  Marko Anastasov  <marko@marko.anastasov.name>

	* examples/book/printing/advanced/previewdialog.cc:
	* examples/book/printing/advanced/previewdialog.h:
	Added on_hide(), so that we call PrintOperationPreview's end_preview()
	on window manager's close action too.

2006-08-02  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/printing/advanced/previewdialog.cc: Constructor:
	Improve the packing of the widgets.
	on_popreview_got_page_size(): Add a comment to explain.

2006-08-02  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/printing/advanced/previewdialog.cc:
	Constructor: Initialize m_DpiX and m_DpiY, as noticed by valgrind. 