@@ -1,3 +1,12 @@
+2006-08-11  Marko Anastasov  <marko@marko.anastasov.name>
+
+	* docs/tutorial/figures/Makefile.am:
+	* docs/tutorial/figures/printing.png: Added a screenshot of the main
+	window of the printing example(s).
+	* docs/tutorial/gtkmm-tut.xml: Minor changes to the printing chapter:
+	fixed end_print() explanation, mentioning of the advanced example and
+	the title of the example figure.
+
 2.9.10:
 
 2006-08-05  Johannes Schmid  <jhs@cvs.gnome.org>
